# PristonTale-EU-main

./: .gitignore  CMakeLists.txt
Server/server/: HNSSkill.cpp  SQLAPI.cpp  SQLConnection.cpp  cheatserver.cpp  globals.cpp  globals.h  itemserver.cpp  logserver.cpp  lootserver.cpp  lootserver.h  netserver.cpp  packetserver.cpp  server.cpp  servercommand.cpp  servercore.cpp
docs/: CHEATS_REFERENCE.md  QUICKSTART.md
docs/reference/: aging-reference.md  item-drop-reference.md  magician-milestone-stats.md  monster-spawn-reference.md  pikeman-milestone-stats.md  zone-reference.md
scripts/: export-aging-reference.ps1  export-item-drop-reference.ps1  export-monster-spawn-reference.ps1  export-zone-reference.ps1  launch-all.ps1
shared/: user.cpp  user.h
